[tool.poetry]
name = "swchp2pcom"
version = "0.4.1"
description = "A Python package for peer-to-peer communication for swarmchestrate entities"
authors = [
    "Dr. József Kovács <jozsef.kovacs@sztaki.hun-ren.hu>",
    "Benedek Kovács <bened3k@sztaki.hu>",
]
readme = "README.md"
packages = [{include = "swchp2pcom"}]

[tool.poetry.dependencies]
twisted = "*"
kademlia = "*"
miniupnpc = "*"
python = "^3.12"
setuptools = ">=78.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-twisted = "^1.14.0"

[tool.pytest.ini_options]
markers = [
    "twisted: marks tests that involve the Twisted reactor",
]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
